Sutter Health/src/objects/AQRS_Provider_Attributes__c.object
<CustomObject>
    <fields>
        <fullName>Department_Id__c</fullName>
        <label>Department Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Mnemonic__c</fullName>
        <label>Department Mnemonic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Id__c</fullName>
        <label>Division Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Mnemonic__c</fullName>
        <label>Division Mnemonic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <label>Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Mnemonic__c</fullName>
        <label>Facility Mnemonic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Id__c</fullName>
        <label>Foundation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Mnemonic__c</fullName>
        <label>Foundation Mnemonic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Provider_Key__c</fullName>
        <label>Master Provider Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult BMI Assessment</fullName>
                </value>
                <value>
                    <fullName>Annual Monitoring for Patients on Persistent Medications</fullName>
                </value>
                <value>
                    <fullName>Appropriate Testing for Children with Pharyngitis</fullName>
                </value>
                <value>
                    <fullName>Asthma Medication Ratio</fullName>
                </value>
                <value>
                    <fullName>Avoidance of Antibiotic Treatment for Adults with Acute Bronchitis</fullName>
                </value>
                <value>
                    <fullName>BreastCancerScreening</fullName>
                </value>
                <value>
                    <fullName>CAD: ACE inhibitor or ARB Therapy for Patients With CAD or Diabetes</fullName>
                </value>
                <value>
                    <fullName>Cervical Cancer Overscreening</fullName>
                </value>
                <value>
                    <fullName>CervicalCancerScreening</fullName>
                </value>
                <value>
                    <fullName>ChildhoodImmunizeStatus</fullName>
                </value>
                <value>
                    <fullName>ChildrenwithUpperRespiratoryInfection</fullName>
                </value>
                <value>
                    <fullName>Chlamydia Screening in Woman</fullName>
                </value>
                <value>
                    <fullName>ColorectalCancerScreening</fullName>
                </value>
                <value>
                    <fullName>ComprehensiveDiabetes</fullName>
                </value>
                <value>
                    <fullName>Controlling Blood Pressure for People With Hypertension</fullName>
                </value>
                <value>
                    <fullName>Disease-Modifying Anti-Rheumatic Drug Therapy for Rheumatiod Arthritis</fullName>
                </value>
                <value>
                    <fullName>High-Risk Medication</fullName>
                </value>
                <value>
                    <fullName>Human Papillomavirus Vaccine for Adolescents</fullName>
                </value>
                <value>
                    <fullName>Immunizations for Adolescents</fullName>
                </value>
                <value>
                    <fullName>IVD: Use of Asprin or Another Antithrombotic</fullName>
                </value>
                <value>
                    <fullName>Osteoporosis Management in Women Who Had a Fracture</fullName>
                </value>
                <value>
                    <fullName>Preventive Care and Screening: Pneumonia Vaccination for Patients 65 Years and Older</fullName>
                </value>
                <value>
                    <fullName>Proportion of Days Covered by Medications</fullName>
                </value>
                <value>
                    <fullName>Use of Imaging Studies for Low back Pain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medic Plus</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Sutter Health Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO_P4P_MEDICARE</fullName>
                </value>
                <value>
                    <fullName>FFS_P4P_COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>HMO_P4P_COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>FFS_P4P_MEDICARE</fullName>
                </value>
                <value>
                    <fullName>RAF Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Id__c</fullName>
        <label>Provider Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AQRS Provider Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Foundation_Mnemonic__c</columns>
        <columns>Foundation_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AQRS Provider Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AQRS Provider Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>